# cosmos-vibe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COSMOS.md  INTEGRATIONS.md  LICENSE  README.ko.md  README.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_integration.yml
.github/workflows/: conformance.yml  publish.yml  validate.yml
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/430fd572-5019-4a64-918b-3036c242ef7c/: hud-state.json
.omc/state/sessions/80a96363-9c4d-4812-8794-60db828ffe29/: hud-state.json
.planning/: HANDOFF.json
.serena/: project.yml
bundle/: cosmos-instructions.md
cli/: README.md  index.js  package.json
cosmos_vibe/adapters/claude_code/: hooks.py  installer.py
cosmos_vibe/api/: observation.py
cosmos_vibe/cli/: commands.py
cosmos_vibe/core/: orchestrator.py  quantum_memory.py  resonance.py
cosmos_vibe/mcp/: server.py
docs/superpowers/plans/: 2026-05-11-cosmos-vibe-plugin-redesign.md
docs/superpowers/specs/: 2026-05-11-cosmos-vibe-plugin-redesign.md
examples/: README.md
examples/_template/: README.md  crystallize-report.md  observe-snapshot.md  spawn-command.md
examples/auth-audit/: README.md  observe-snapshot.md  spawn-command.md
examples/auth-audit/insights/: alpha.jsonl  beta.jsonl  gamma.jsonl
experiments/: README.md  _template.qa.yaml  rate-limiting.example.qa.yaml
mcp/: README.md  index.js  package.json
mcp/skills/: crystallize.md  spawn.md  stop.md
plans/: 2026-05-13-quantum-dashboard.md
presets/cursor/: cosmos.mdc
python/: README.md  pyproject.toml
python/examples/: 01_basic_psi.py  02_entanglement.py  03_constraint_curvature.py  04_quantum_interference.py  05_bell_state.py  06_chsh_test.py  07_quantum_gates.py  08_decoherence.py  09_cosmos_interop.py
python/quantumagent/: __init__.py  core.py  interop.py  quantum.py
scripts/: build-bundle.sh
skills/crystallize/: SKILL.md
skills/observe/: SKILL.md
skills/run/: SKILL.md
skills/scan/: SKILL.md
skills/singularity/: SKILL.md
skills/spawn/: SKILL.md
skills/spin/: SKILL.md
skills/stop/: SKILL.md
src/: app.js  auth.js  middleware.js
tests/: conformance.sh  test_hooks.py  test_integration.py  test_mcp_server.py  test_observation_api.py  test_orchestrator.py  test_quantum_memory.py  test_resonance.py
tools/: dashboard.html  dashboard.js
(+7 files in other folders)
